# pmr171-logo-tool

./: .gitignore  LICENSE  README.md  TODO.md  cli.py  pyproject.toml
firmware/: README.md
pmr171_logo/: __init__.py  constants.py  firmware_patch.py  fw_new.py  image_convert.py
prompts/: multi-model-boot-logo.prompt.md
tests/: __init__.py  test_logo_tool.py
